# Cristal-Terminal

./: .env.local.example  .gitignore  BACKEND.md  CLAUDE.md  auth.config.ts  auth.ts  clearDb.ts  cristal.db  explicacao_tecnica_projeto.md  middleware.ts  package-lock.json  package.json  pnpm-lock.yaml  setup_quant.sh  test_spin.html  update-countries-atlas.js  update-countries.js  update-flags.js
app/: layout.tsx  page.tsx
app/(auth)/: layout.tsx
components/cristal/: CommandLine.tsx  CommandPalette.tsx  ContextMenu.tsx  CristalTerminal.tsx  HelpView.tsx  LocaleSelector.tsx  MathFormula.tsx  StatusBar.tsx  TerminalHeader.tsx  TradeTicket.tsx  UserButton.tsx
components/ui/: alert-dialog.tsx  breadcrumb.tsx  calendar.tsx  card.tsx  chart.tsx  command.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  form.tsx  input.tsx  menubar.tsx  select.tsx  sheet.tsx  sonner.tsx  table.tsx  tabs.tsx  textarea.tsx  toggle.tsx
i18n/: en.ts  es.ts  pt.ts
lib/: command-parser.ts  db.ts  i18n.ts  plotly-wrapper.ts  redis.ts  users.ts  utils.ts
lib/ai/: prompts.ts
lib/mocks/: calendar.ts  candlestick.ts  correlacao.ts  crypto.ts  heatmap.ts  macro.ts  news.ts  order-book.ts  screener.ts  world-data.ts  yield-curve.ts
lib/quant/: black-scholes.ts  copulas.ts  credit-risk.ts  (+13 more)
native/quant/: CMakeLists.txt  black_scholes.cpp  monte_carlo.cpp
python_backend/: server.py  start.sh
scripts/: clearDb.ts  compile.sh
services/: ollama.ts
store/: terminal.store.ts
styles/: globals.css
types/: market.ts  next-auth.d.ts  react-plotly.d.ts  react-simple-maps.d.ts  terminal.ts
(+78 files in other folders)
